--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "javiereguiluz/easyadmin-bundle": "^1.17",
         "sensio/framework-extra-bundle": "^3.0",
         "symfony/console": "^3.3",
         "symfony/debug-bundle": "^3.3",
@@ -15,6 +16,7 @@
         "symfony/twig-bundle": "^3.3",
         "symfony/validator": "^3.3",
         "symfony/web-server-bundle": "^3.3",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
