--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "egeloen/ckeditor-bundle": "^6.0",
         "javiereguiluz/easyadmin-bundle": "^1.17",
         "sensio/framework-extra-bundle": "^3.0",
         "symfony/console": "^3.3",
@@ -58,7 +59,7 @@
     "extra": {
         "symfony": {
             "id": "01BT9N9CCEK56BBAYQQZ94YX9E",
-            "allow-contrib": false
+            "allow-contrib": true
         }
     }
 }
