--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,4 +1,5 @@
 easy_admin:
     entities:
         # List the entity class name you want to manage
+        - App\Entity\Category
         - App\Entity\Product
