--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production"
+        "build": "encore production",
+        "postinstall": "yarn run build"
     },
     "dependencies": {
         "normalize.css": "^7.0.0"
