--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "engines": {
+        "node": "^8.4.0",
+        "yarn": "^1.0.1"
+    },
     "devDependencies": {
         "@symfony/webpack-encore": "^0.12.0"
     },
