--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
         "node": "^8.4.0",
         "yarn": "^1.0.1"
     },
-    "devDependencies": {
-        "@symfony/webpack-encore": "^0.12.0"
-    },
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "./nodes_modules/.bin/encore production",
+        "build": "encore production",
         "postinstall": "yarn run build"
     },
     "dependencies": {
-        "normalize.css": "^7.0.0"
+        "normalize.css": "^7.0.0",
+        "@symfony/webpack-encore": "^0.12.0"
     }
 }
