--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "scripts": {
         "auto-scripts": {
             "make cache-warmup": "script",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "ckeditor:install": "symfony-cmd",
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
         },
         "post-install-cmd": [
             "@auto-scripts"
