Fixed composer files

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "auto-scripts": {
             "make cache-warmup": "script",
             "ckeditor:install": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
